set_params and get_params completed for pyod. Starting config.py

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,23 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyod'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyod\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mABOD\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ABOD\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyod'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pyod.models.abod.ABOD'>\n",
+      "ABOD(contamination=0.5, method='fast', n_neighbors=4)\n"
      ]
     }
    ],
    "source": [
-    "from pyod.models.ABOD import ABOD"
+    "%reload_ext autoreload\n",
+    "# temporary solution for relative imports in case sadl is not installed\n",
+    "# if sadl is installed, no need to use the line\n",
+    "import sys\n",
+    "import os\n",
+    "import inspect\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.path.dirname(\"__file__\"), '..')))\n",
+    "\n",
+    "from SADL.static_data.algorithms import pyod\n",
+    "\n",
+    "kwargs = {\"algorithm\": \"abod\",\"contamination\":0.5, \"label_parser\": True, \"n_neighbors\": 4}\n",
+    "model = pyod.PyodAnomalyDetection(**kwargs)\n",
+    "\n",
+    "print(model.algorithm.__class__.__name__)\n",
+    "print(model.model)\n",
+    "#inspect.signature(pyod.PyodAnomalyDetection.__init__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Signature (self, contamination=0.1, n_neighbors=5, method='fast')>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyod.models import cblof\n",
+    "from pyod.models.abod import ABOD\n",
+    "import inspect\n",
+    "inspect.signature(ABOD.__init__)"
    ]
   }
  ],
@@ -38,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
