--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,58 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pyod.models.abod.ABOD'>\n",
-      "ABOD(contamination=0.5, method='fast', n_neighbors=4)\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "True\n",
+      "ABOD(contamination=2, method='method', n_neighbors=4)\n",
+      "True\n",
+      "ABOD(contamination=2, method='fast', n_neighbors=4)\n"
      ]
     }
    ],
    "source": [
-    "%reload_ext autoreload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "#%reload_ext autoreload\n",
+    "\n",
     "# temporary solution for relative imports in case sadl is not installed\n",
     "# if sadl is installed, no need to use the line\n",
     "import sys\n",
     "import os\n",
     "import inspect\n",
+    "from inspect import signature\n",
+    "import numpy as np\n",
     "sys.path.append(os.path.abspath(os.path.join(os.path.dirname(\"__file__\"), '..')))\n",
     "\n",
     "from SADL.static_data.algorithms import pyod\n",
     "\n",
-    "kwargs = {\"algorithm\": \"abod\",\"contamination\":0.5, \"label_parser\": True, \"n_neighbors\": 4}\n",
+    "kwargs = {\"algorithm\": \"abod\",\"contamination\":2, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'method'}\n",
     "model = pyod.PyodAnomalyDetection(**kwargs)\n",
     "\n",
-    "print(model.algorithm.__class__.__name__)\n",
+    "#print(model.algorithm)\n",
+    "print(model.label_parser)\n",
     "print(model.model)\n",
-    "#inspect.signature(pyod.PyodAnomalyDetection.__init__)\n"
+    "#print(signature(model.__class__).parameters.values())\n",
+    "\n",
+    "kwargs = {\"algorithm\": \"abod\",\"contamination\":2, \"label_parser\": False, \"n_neighbors\": 4, \"method\": 'fast'}\n",
+    "model.set_params(**kwargs)\n",
+    "print(model.label_parser)\n",
+    "print(model.model)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Signature (self, contamination=0.1, n_neighbors=5, method='fast')>"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of inliers: 150\n",
+      "Number of outliers: 50\n",
+      "Ground truth shape is (200,). Outlier are 1 and inliers are 0.\n",
+      "\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m outliers_fraction \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.25\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Compare given detectors under given settings\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Initialize the data\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m xx, yy \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mmeshgrid(np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m100\u001b[39m), np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m100\u001b[39m))\n\u001b[1;32m      8\u001b[0m n_inliers \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m((\u001b[38;5;241m1.\u001b[39m \u001b[38;5;241m-\u001b[39m outliers_fraction) \u001b[38;5;241m*\u001b[39m n_samples)\n\u001b[1;32m      9\u001b[0m n_outliers \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(outliers_fraction \u001b[38;5;241m*\u001b[39m n_samples)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
-    "from pyod.models import cblof\n",
-    "from pyod.models.abod import ABOD\n",
-    "import inspect\n",
-    "inspect.signature(ABOD.__init__)"
+    "# Define the number of inliers and outliers\n",
+    "n_samples = 200\n",
+    "outliers_fraction = 0.25\n",
+    "\n",
+    "# Compare given detectors under given settings\n",
+    "# Initialize the data\n",
+    "xx, yy = np.meshgrid(np.linspace(-7, 7, 100), np.linspace(-7, 7, 100))\n",
+    "n_inliers = int((1. - outliers_fraction) * n_samples)\n",
+    "n_outliers = int(outliers_fraction * n_samples)\n",
+    "ground_truth = np.zeros(n_samples, dtype=int)\n",
+    "ground_truth[-n_outliers:] = 1\n",
+    "\n",
+    "# Show the statics of the data\n",
+    "print('Number of inliers: %i' % n_inliers)\n",
+    "print('Number of outliers: %i' % n_outliers)\n",
+    "print('Ground truth shape is {shape}. Outlier are 1 and inliers are 0.\\n'.format(shape=ground_truth.shape))\n",
+    "print(ground_truth)\n",
+    "\n",
+    "X1 = 0.3 * np.random.randn(n_inliers // 2, 2)\n",
+    "X2 = 0.3 * np.random.randn(n_inliers // 2, 2)\n",
+    "X = np.r_[X1, X2]\n",
+    "# Add outliers\n",
+    "X = np.r_[X, np.random.uniform(low=-6, high=6, size=(n_outliers, 2))]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Fitting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "PYODerror fit(): ('method', 'is not a valid method')\n",
+      "For further reference please see: https://pyod.readthedocs.io/en/latest/\n",
+      "PYODerror decision_function(): This ABOD instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.\n",
+      "For further reference please see: https://pyod.readthedocs.io/en/latest/\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[139], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m model\u001b[38;5;241m.\u001b[39mset_params(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#print(model.model)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Fit the model using SADL Library - sin error\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#model.fit(X)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m scores_pred \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecision_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(scores_pred)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'NoneType' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "kwargs = {\"algorithm\": \"abod\",\"contamination\":2, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'method'}\n",
+    "model = pyod.PyodAnomalyDetection(**kwargs)\n",
+    "\n",
+    "# Fit the model using SADL Library - error en fit\n",
+    "model.fit(X)\n",
+    "kwargs = {\"algorithm\": \"abod\",\"contamination\":0.1, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'fast'}\n",
+    "model.set_params(**kwargs)\n",
+    "#print(model.model)\n",
+    "# Fit the model using SADL Library - sin error\n",
+    "#model.fit(X)\n",
+    "scores_pred = model.decision_function(X) * -1\n",
+    "print(scores_pred)"
    ]
   }
  ],
