basic pyod models included, positional arguments parsed

--- a/notebooks/test_pyod_test.ipynb
+++ b/notebooks/test_pyod_test.ipynb
@@ -31,7 +31,7 @@
     "    n_train=self.n_train, n_test=self.n_test,\n",
     "    contamination=self.contamination, random_state=42)\n",
     "\n",
-    "    kwargs = {\"algorithm\": \"abod\",\"contamination\":2, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'method'}\n",
+    "    kwargs = {\"algorithm_\": \"abod\",\"contamination\":2, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'method'}\n",
     "\n",
     "    self.clf = ABOD(contamination=self.contamination, method='default')\n",
     "    self.clf.fit(self.X_train)\n"
