Sklearn integration last details

--- a/notebooks/test_sklearn.ipynb
+++ b/notebooks/test_sklearn.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -93,15 +93,63 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'SkLearnAnomalyDetection' object has no attribute 'score_samples'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 29\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m#model.fit(X)\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#model.score_samples(X)\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m#Fit models\u001b[39;00m\n\u001b[1;32m     28\u001b[0m model1\u001b[38;5;241m.\u001b[39mfit(X)\n\u001b[0;32m---> 29\u001b[0m \u001b[43mmodel1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscore_samples\u001b[49m(X)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SkLearnAnomalyDetection' object has no attribute 'score_samples'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([-8.89634983e-01, -1.69750635e+00, -1.47999686e+00, -1.67982403e+00,\n",
+       "       -2.25100078e+00, -2.80526692e+00, -1.96124726e+00, -8.58590968e-01,\n",
+       "       -4.93819228e+00, -1.04724917e+00, -9.08951578e-01, -6.48300589e-01,\n",
+       "       -1.77221212e+00, -1.48883540e+00, -1.22435123e+00, -4.12103173e-01,\n",
+       "       -2.18110428e+00, -1.00678139e+00, -1.33650552e+00, -7.07209963e+00,\n",
+       "       -2.30026631e+00, -4.97440389e+00, -2.25184494e+00, -5.68123044e-01,\n",
+       "       -1.36532715e+00, -4.46276669e-01, -2.32723087e+00, -6.33910284e-01,\n",
+       "       -6.44008396e+00, -6.12794250e+00, -3.97147059e+00, -2.58377225e-01,\n",
+       "       -1.38842653e+00, -1.23759552e-01, -2.05290413e+00, -1.81660238e-01,\n",
+       "       -3.92242560e+00, -3.04534526e+00, -3.50279599e+00, -4.65418975e-01,\n",
+       "       -2.28613480e+00, -1.52905835e-01, -1.96789247e+00, -1.90833504e+00,\n",
+       "       -1.37264070e+00, -1.58213196e+00, -2.23475675e-01, -2.90914753e+00,\n",
+       "       -8.34009795e-02, -4.44765874e-01, -2.74618596e-01, -2.04432286e+00,\n",
+       "       -2.17454639e-01, -1.49992472e+00, -2.72119813e+00, -1.16179088e+00,\n",
+       "       -4.37911899e+00, -3.02126839e+00, -4.86300226e+00, -1.75025751e+00,\n",
+       "       -1.62789345e+00, -4.02787505e+00, -1.85908221e+00, -1.02058351e+00,\n",
+       "       -1.66009149e+00, -4.25455168e-01, -1.12661968e+00, -9.28670664e-01,\n",
+       "       -1.42375084e-02, -5.41218300e-01, -1.86675229e+00, -1.42104451e+00,\n",
+       "       -5.55785818e-01, -4.65810554e+00, -1.07892913e+00, -1.30192468e-01,\n",
+       "       -1.73436599e+00, -4.53880115e-01, -2.13748389e+00, -2.18632675e-01,\n",
+       "       -6.59373808e-01, -2.67468524e-02, -5.50787694e+00, -1.16107015e+00,\n",
+       "       -8.15383846e-01, -8.27501230e-01, -2.97101573e+00, -5.97971031e-01,\n",
+       "       -1.25142740e+00, -1.68612649e+00, -8.70406283e-01, -2.40042782e-01,\n",
+       "       -4.85890769e+00, -2.69653217e+00, -1.37730339e+00, -3.58807008e-01,\n",
+       "       -1.45210144e+00, -1.54785601e+00, -3.92306365e+00, -1.97747397e-01,\n",
+       "       -3.02951649e+00, -2.63070784e+00, -4.08082197e+00, -3.38098376e-01,\n",
+       "       -6.09755747e+00, -3.32186807e-01, -8.30029101e+00, -1.44940581e+00,\n",
+       "       -1.35493091e+00, -3.83927136e+00, -1.68073372e+00, -7.72002566e-02,\n",
+       "       -8.52884781e-01, -9.67010700e+00, -6.91445823e+00, -4.60131243e-01,\n",
+       "       -4.68013947e+00, -4.46700071e+00, -3.81360818e+00, -2.79984380e+00,\n",
+       "       -6.17661286e+00, -4.15859531e+00, -2.77939264e+00, -1.04407632e+00,\n",
+       "       -7.71085963e-01, -7.95356730e-01, -1.59851875e+00, -5.56512750e-01,\n",
+       "       -1.23567517e+00, -1.15219616e+00, -9.88084404e-01, -2.37927202e+00,\n",
+       "       -6.25717209e-01, -2.64824620e+00, -6.20757809e-01, -6.07572147e+00,\n",
+       "       -2.46607182e+00, -2.73080843e+00, -5.81458544e-01, -2.89365951e+00,\n",
+       "       -3.54898882e+00, -4.40106296e-01, -7.15220873e-01, -1.03041877e+01,\n",
+       "       -2.40611753e-01, -1.16439978e+00, -1.15972284e-01, -4.10618853e+00,\n",
+       "       -3.04846958e+00, -3.75773681e+00, -2.24955931e+02, -4.12574063e+02,\n",
+       "       -2.69098332e+02, -2.28573151e+02, -2.00057470e+02, -3.69470852e+02,\n",
+       "       -5.05886317e+02, -3.00511364e+01, -6.63319883e+02, -8.31978992e+02,\n",
+       "       -5.34147717e+02, -2.64265845e+02, -3.50325124e+02, -1.46877811e+01,\n",
+       "       -4.95677244e+02, -5.96049724e+02, -3.24936759e+02, -7.59312037e+02,\n",
+       "       -1.10970800e+02, -4.05599224e+02, -4.11757684e+02, -3.69314012e+01,\n",
+       "       -3.58674882e+02, -2.66402594e+02, -2.35192268e+02, -5.97640476e+02,\n",
+       "       -4.56658039e+01, -2.19793204e+02, -3.91543243e+02, -5.92001534e+02,\n",
+       "       -3.62584613e+02, -4.73462939e+02, -3.96727779e+02, -3.06675449e+02,\n",
+       "       -2.16957281e+02, -6.67882279e+01, -4.73878815e+02, -1.11796814e+02,\n",
+       "       -5.67250273e+01, -1.22052122e+02, -4.75189902e+02, -2.89573436e+02,\n",
+       "       -1.38821280e+02, -2.92574288e+02, -6.71422106e+02, -5.41252308e+02,\n",
+       "       -4.41779508e+02, -4.72366092e+02, -8.19367997e+02, -1.95374112e+02])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -208,18 +256,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
   }
  },
  "nbformat": 4,
