added test flexanomalies static data an time series. Define federated  time series utils

--- a/notebooks_test/test_flexanomalies.ipynb
+++ b/notebooks_test/test_flexanomalies.ipynb
@@ -34,14 +34,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-03 14:07:13.555214: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-03 14:07:13.556207: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-03 14:07:13.559575: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-03 14:07:13.567470: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-03 19:16:10.237362: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-03 19:16:10.238460: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-03 19:16:10.241563: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-03 19:16:10.249948: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1738588033.581071  210745 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1738588033.584827  210745 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-03 14:07:13.599739: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1738606570.263671   12967 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1738606570.268713   12967 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-03 19:16:10.285875: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x7dcff357fb50>"
+       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x728a06493d60>"
       ]
      },
      "execution_count": 4,
@@ -225,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.33671102 0.33603209 0.34714862 ... 0.34992857 0.35070958 0.35563846]\n",
+      "[0.40890258 0.33228159 0.33283597 ... 0.40204865 0.34113684 0.33959725]\n",
       "Warning: The model 'isolationForest' does not have a 'get_params' method.\n",
       "Inspecting model's attributes:\n",
       "contamination: 0.1\n",
@@ -246,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "<flexanomalies.utils.iforest.IsolationForest at 0x7dcff9123220>"
+       "<flexanomalies.utils.iforest.IsolationForest at 0x728a06493460>"
       ]
      },
      "execution_count": 5,
@@ -275,7 +275,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., ..., 0., 0., 0.])"
+       "array([1., 0., 0., ..., 1., 0., 0.])"
       ]
      },
      "execution_count": 6,
@@ -297,15 +297,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc: 97.393% \n",
+      "Acc: 97.217% \n",
       "\n",
-      "Precision: 0.747 \n",
+      "Precision: 0.736 \n",
       "\n",
-      "F1score: 0.851 \n",
+      "F1score: 0.841 \n",
       "\n",
-      "Recall: 0.990 \n",
+      "Recall: 0.981 \n",
       "\n",
-      "AUC_ROC: 0.981 \n",
+      "AUC_ROC: 0.976 \n",
       "\n"
      ]
     }
