--- a/notebooks_test/test_flexanomalies.ipynb
+++ b/notebooks_test/test_flexanomalies.ipynb
@@ -34,14 +34,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-03 19:16:10.237362: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-03 19:16:10.238460: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-03 19:16:10.241563: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-03 19:16:10.249948: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-17 15:01:38.645123: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-17 15:01:38.646100: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-17 15:01:38.649917: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-17 15:01:38.658371: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1738606570.263671   12967 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1738606570.268713   12967 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-03 19:16:10.285875: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1739800898.673134  106275 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1739800898.676692  106275 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-17 15:01:38.692174: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -71,9 +71,6 @@
      "text": [
       "Federated Params:{'n_rounds': 10, 'n_clients': 5} \n",
       " Model Params:{'algorithm_': 'isolationForest', 'contamination': 0.1, 'label_parser': None, 'n_estimators': 100}\n",
-      "{'algorithm_': 'isolationForest', 'contamination': 0.1, 'label_parser': None, 'n_estimators': 100}\n",
-      "odict_values([<Parameter \"self\">, <Parameter \"n_estimators=100\">, <Parameter \"max_samples=1000\">, <Parameter \"contamination=0.1\">, <Parameter \"max_features=1.0\">, <Parameter \"bootstrap=False\">, <Parameter \"n_jobs=1\">, <Parameter \"behaviour='old'\">, <Parameter \"random_state=None\">, <Parameter \"model_path=''\">, <Parameter \"verbose=0\">])\n",
-      "{'n_estimators': 100, 'contamination': 0.1}\n",
       "Warning: The model 'isolationForest' does not have a 'get_params' method.\n",
       "Inspecting model's attributes:\n",
       "contamination: 0.1\n",
@@ -204,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x728a06493d60>"
+       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x72947466fd60>"
       ]
      },
      "execution_count": 4,
@@ -225,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.40890258 0.33228159 0.33283597 ... 0.40204865 0.34113684 0.33959725]\n",
+      "[0.39448265 0.34773952 0.34198724 ... 0.33860461 0.40406642 0.41744947]\n",
       "Warning: The model 'isolationForest' does not have a 'get_params' method.\n",
       "Inspecting model's attributes:\n",
       "contamination: 0.1\n",
@@ -246,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "<flexanomalies.utils.iforest.IsolationForest at 0x728a06493460>"
+       "<flexanomalies.utils.iforest.IsolationForest at 0x72950a152b00>"
       ]
      },
      "execution_count": 5,
@@ -275,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1., 0., 0., ..., 1., 0., 0.])"
+       "array([1., 0., 0., ..., 0., 1., 1.])"
       ]
      },
      "execution_count": 6,
@@ -297,15 +294,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc: 97.217% \n",
+      "Acc: 97.189% \n",
       "\n",
-      "Precision: 0.736 \n",
+      "Precision: 0.724 \n",
       "\n",
-      "F1score: 0.841 \n",
+      "F1score: 0.837 \n",
       "\n",
-      "Recall: 0.981 \n",
+      "Recall: 0.993 \n",
       "\n",
-      "AUC_ROC: 0.976 \n",
+      "AUC_ROC: 0.982 \n",
       "\n"
      ]
     }
@@ -510,30 +507,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Federated Params:{'n_clients': 5, 'n_rounds': 10, 'X_train': array([[43,  0, 76, ..., 33, 35,  2],\n",
-      "       [56,  0, 79, ..., 23, 22,  0],\n",
-      "       [41,  1, 86, ..., 45, 47,  2],\n",
-      "       ...,\n",
-      "       [45,  3, 86, ..., 40, 42,  2],\n",
-      "       [38,  4, 83, ..., 45, 44,  0],\n",
-      "       [45,  0, 74, ..., 29, 30,  2]]), 'y_train': array([[0],\n",
-      "       [0],\n",
-      "       [0],\n",
-      "       ...,\n",
-      "       [0],\n",
-      "       [0],\n",
-      "       [0]])} \n",
+      "Federated Params:{'n_clients': 5, 'n_rounds': 10} \n",
       " Model Params:{'algorithm_': 'clusterAnomaly', 'contamination': 0.1, 'label_parser': None, 'n_clusters': 4}\n",
-      "{'algorithm_': 'clusterAnomaly', 'contamination': 0.1, 'label_parser': None, 'n_clusters': 4}\n",
-      "odict_values([<Parameter \"self\">, <Parameter \"n_clusters\">, <Parameter \"seed=None\">, <Parameter \"init_centroids='random'\">, <Parameter \"max_iter=100\">, <Parameter \"tol=0.0001\">, <Parameter \"n_init=1\">, <Parameter \"verbose=True\">, <Parameter \"algorithm='lloyd'\">, <Parameter \"model_path=''\">, <Parameter \"contamination=0.1\">])\n",
-      "{'n_clusters': 4, 'contamination': 0.1}\n",
       "Warning: The model 'clusterAnomaly' does not have a 'get_params' method.\n",
       "Inspecting model's attributes:\n",
       "contamination: 0.1\n",
@@ -572,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -664,10 +646,10 @@
     {
      "data": {
       "text/plain": [
-       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x72598f1d10f0>"
+       "<SADL.federated_data.algorithms.flexanomalies.FlexAnomalyDetection at 0x75d2cf0e49a0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,9 +660,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[65.66825126 65.68273143 37.40764473 ... 64.63425254 46.48266521\n",
+      " 66.82364004]\n",
+      "Warning: The model 'clusterAnomaly' does not have a 'get_params' method.\n",
+      "Inspecting model's attributes:\n",
+      "contamination: 0.1\n",
+      "n_clusters: 4\n",
+      "seed: None\n",
+      "init_centroids: random\n",
+      "max_iter: 100\n",
+      "tol: 0.0001\n",
+      "verbose: True\n",
+      "n_init: 1\n",
+      "algorithm: lloyd\n",
+      "model_path: \n",
+      "model: KMeans(init='random', max_iter=100, n_clusters=4, n_init=1)\n",
+      "algorithm_: clusterAnomaly\n",
+      "label_parser: None\n",
+      "cluster_centers_: [[ 5.75000000e+01  0.00000000e+00  7.90000000e+01 -5.00000000e-01\n",
+      "  -1.88000000e+02 -1.06005000e+04  2.15000000e+01  2.67500000e+02\n",
+      "   2.46000000e+02]\n",
+      " [ 5.85833333e+01 -7.08333333e-01  8.17916667e+01  1.66666667e-01\n",
+      "   7.79166667e+01  4.79245833e+03  2.31250000e+01  4.45833333e+00\n",
+      "  -1.83333333e+01]\n",
+      " [ 9.04000000e+01  2.26720000e+03  9.68000000e+01 -6.00000000e-01\n",
+      "   3.68000000e+01 -5.00000000e+00  6.40000000e+00  6.00000000e+01\n",
+      "   5.36000000e+01]\n",
+      " [ 5.58965222e+01  2.17299004e+00  8.58169666e+01 -8.38351420e-01\n",
+      "   1.48769068e+01  2.07845879e-02  2.99398486e+01  7.13091932e+01\n",
+      "   4.14115476e+01]]\n",
+      "d_scores_: [333.93649923 275.52770802 295.68267733 ... 299.1211609  293.47555495\n",
+      " 285.94841882]\n",
+      "labels_: [1. 0. 0. ... 0. 0. 0.]\n",
+      "result_metrics_: {'Accuracy': '86.911%', 'Precision': '0.204', 'F1': '0.238', 'Recall': '0.285', 'AUC_ROC': '0.600'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<flexanomalies.utils.cluster.ClusterAnomaly at 0x75d2cf0e53c0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores_pred = modelCluster.decision_function(X_train)\n",
     "print(scores_pred)\n",
@@ -689,22 +721,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc: 93.727% \n",
+      "Acc: 93.415% \n",
       "\n",
-      "Precision: 0.529 \n",
+      "Precision: 0.530 \n",
       "\n",
-      "F1score: 0.628 \n",
+      "F1score: 0.617 \n",
       "\n",
-      "Recall: 0.772 \n",
+      "Recall: 0.738 \n",
       "\n",
-      "AUC_ROC: 0.861 \n",
+      "AUC_ROC: 0.844 \n",
       "\n"
      ]
     }
@@ -987,6 +1019,59 @@
    ],
    "source": [
     "modelPca.evaluate(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Test: new model and new funtions primitives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Federated Params:{} \n",
+      " Model Params:{'algorithm_': 'myAnomalyModel', 'param1': 10, 'param2': 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from SADL.federated_data.algorithms import flexanomalies\n",
+    "class MyAnomalyModel:\n",
+    "    def __init__(self, param1, param2):\n",
+    "        self.param1 = param1\n",
+    "        self.param2 = param2\n",
+    "\n",
+    "flexanomalies.FlexAnomalyDetection.register_algorithm(\"myAnomalyModel\", MyAnomalyModel)\n",
+    "\n",
+    "# Ahora puedes instanciar usando el nuevo algoritmo\n",
+    "detector = flexanomalies.FlexAnomalyDetection(algorithm_=\"myAnomalyModel\",param1=10, param2=20)\n",
+    "detector.register_federated_functions(\"customAnomaly\", {\n",
+    "    \"build_model\": lambda: print(\"Building Custom Model\"),\n",
+    "    \"copy\": lambda: print(\"Copying Custom Model\"),\n",
+    "    \"train\": lambda: print(\"Training Custom Model\"),\n",
+    "    \"collect\": lambda: print(\"Collecting Custom Model Weights\"),\n",
+    "    \"aggregate\": lambda: print(\"Aggregating Custom Model Weights\"),\n",
+    "    \"set_weights\": lambda: print(\"Setting Aggregated Weights\"),\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Example using a federated external data set but using flex dataset format \n",
+    "from flexanomalies.utils.load_data import federate_data\n",
+    "detector.flex_data = federate_data(5, X_train, y_train)"
    ]
   }
  ],
