preprocessing and loads static data

--- a/notebooks_test/test_flexanomalies_ts.ipynb
+++ b/notebooks_test/test_flexanomalies_ts.ipynb
@@ -44,7 +44,7 @@
     "from flexanomalies.datasets.preprocessing_utils import scaling\n",
     "from flexanomalies.utils.load_data import split_data\n",
     "from SADL.federated_data.algorithms import flexanomalies\n",
-    "from SADL.federated_data import federated_time_series_utils\n"
+    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n"
    ]
   },
   {
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "processor =   federated_time_series_utils.TimeSeriesProcessor(window_size= kwargs[\"w_size\"], step_size=1, future_prediction=False)\n",
+    "processor = TimeSeriesProcessor(window_size= kwargs[\"w_size\"], step_size=1, future_prediction=False)\n",
     "X_train_windows, y_train_windows, X_test_windows, y_test_windows = processor.process_train_test(X_train, y_train, X_test, y_test)\n",
     "print(\"X_train shape:\", X_train_windows.shape)\n",
     "print(\"y_train shape:\", y_train_windows.shape)\n",
