--- a/notebooks_test/test_flexanomalies.ipynb
+++ b/notebooks_test/test_flexanomalies.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(\".../S-ADL\")\n"
+    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")\n"
    ]
   },
   {
@@ -27,9 +27,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-20 19:47:30.394111: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-03-20 19:47:30.404831: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1742496450.418756  276118 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1742496450.422807  276118 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-03-20 19:47:30.436802: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata: {'uci_id': 350, 'name': 'Default of Credit Card Clients', 'repository_url': 'https://archive.ics.uci.edu/dataset/350/default+of+credit+card+clients', 'data_url': 'https://archive.ics.uci.edu/static/public/350/data.csv', 'abstract': \"This research aimed at the case of customers' default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods.\", 'area': 'Business', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 30000, 'num_features': 23, 'feature_types': ['Integer', 'Real'], 'demographics': ['Sex', 'Education Level', 'Marital Status', 'Age'], 'target_col': ['Y'], 'index_col': ['ID'], 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2009, 'last_updated': 'Fri Mar 29 2024', 'dataset_doi': '10.24432/C55S3H', 'creators': ['I-Cheng Yeh'], 'intro_paper': {'ID': 365, 'type': 'NATIVE', 'title': 'The comparisons of data mining techniques for the predictive accuracy of probability of default of credit card clients', 'authors': 'I. Yeh, Che-hui Lien', 'venue': 'Expert systems with applications', 'year': 2009, 'journal': None, 'DOI': '10.1016/j.eswa.2007.12.020', 'URL': 'https://www.semanticscholar.org/paper/1cacac4f0ea9fdff3cd88c151c94115a9fddcf33', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': \"This research aimed at the case of customers' default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods. From the perspective of risk management, the result of predictive accuracy of the estimated probability of default will be more valuable than the binary result of classification - credible or not credible clients. Because the real probability of default is unknown, this study presented the novel Sorting Smoothing Method to estimate the real probability of default. With the real probability of default as the response variable (Y), and the predictive probability of default as the independent variable (X), the simple linear regression result (Y = A + BX) shows that the forecasting model produced by artificial neural network has the highest coefficient of determination; its regression intercept (A) is close to zero, and regression coefficient (B) to one. Therefore, among the six data mining techniques, artificial neural network is the only one that can accurately estimate the real probability of default.\", 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': 'This research employed a binary variable, default payment (Yes = 1, No = 0), as the response variable. This study reviewed the literature and used the following 23 variables as explanatory variables:\\r\\nX1: Amount of the given credit (NT dollar): it includes both the individual consumer credit and his/her family (supplementary) credit.\\r\\nX2: Gender (1 = male; 2 = female).\\r\\nX3: Education (1 = graduate school; 2 = university; 3 = high school; 4 = others).\\r\\nX4: Marital status (1 = married; 2 = single; 3 = others).\\r\\nX5: Age (year).\\r\\nX6 - X11: History of past payment. We tracked the past monthly payment records (from April to September, 2005) as follows: X6 = the repayment status in September, 2005; X7 = the repayment status in August, 2005; . . .;X11 = the repayment status in April, 2005. The measurement scale for the repayment status is: -1 = pay duly; 1 = payment delay for one month; 2 = payment delay for two months; . . .; 8 = payment delay for eight months; 9 = payment delay for nine months and above.\\r\\nX12-X17: Amount of bill statement (NT dollar). X12 = amount of bill statement in September, 2005; X13 = amount of bill statement in August, 2005; . . .; X17 = amount of bill statement in April, 2005. \\r\\nX18-X23: Amount of previous payment (NT dollar). X18 = amount paid in September, 2005; X19 = amount paid in August, 2005; . . .;X23 = amount paid in April, 2005.\\r\\n', 'citation': None}}\n",
+      "Variable information:    name     role     type      demographic                 description units  \\\n",
+      "0    ID       ID  Integer             None                        None  None   \n",
+      "1    X1  Feature  Integer             None                   LIMIT_BAL  None   \n",
+      "2    X2  Feature  Integer              Sex                         SEX  None   \n",
+      "3    X3  Feature  Integer  Education Level                   EDUCATION  None   \n",
+      "4    X4  Feature  Integer   Marital Status                    MARRIAGE  None   \n",
+      "5    X5  Feature  Integer              Age                         AGE  None   \n",
+      "6    X6  Feature  Integer             None                       PAY_0  None   \n",
+      "7    X7  Feature  Integer             None                       PAY_2  None   \n",
+      "8    X8  Feature  Integer             None                       PAY_3  None   \n",
+      "9    X9  Feature  Integer             None                       PAY_4  None   \n",
+      "10  X10  Feature  Integer             None                       PAY_5  None   \n",
+      "11  X11  Feature  Integer             None                       PAY_6  None   \n",
+      "12  X12  Feature  Integer             None                   BILL_AMT1  None   \n",
+      "13  X13  Feature  Integer             None                   BILL_AMT2  None   \n",
+      "14  X14  Feature  Integer             None                   BILL_AMT3  None   \n",
+      "15  X15  Feature  Integer             None                   BILL_AMT4  None   \n",
+      "16  X16  Feature  Integer             None                   BILL_AMT5  None   \n",
+      "17  X17  Feature  Integer             None                   BILL_AMT6  None   \n",
+      "18  X18  Feature  Integer             None                    PAY_AMT1  None   \n",
+      "19  X19  Feature  Integer             None                    PAY_AMT2  None   \n",
+      "20  X20  Feature  Integer             None                    PAY_AMT3  None   \n",
+      "21  X21  Feature  Integer             None                    PAY_AMT4  None   \n",
+      "22  X22  Feature  Integer             None                    PAY_AMT5  None   \n",
+      "23  X23  Feature  Integer             None                    PAY_AMT6  None   \n",
+      "24    Y   Target   Binary             None  default payment next month  None   \n",
+      "\n",
+      "   missing_values  \n",
+      "0              no  \n",
+      "1              no  \n",
+      "2              no  \n",
+      "3              no  \n",
+      "4              no  \n",
+      "5              no  \n",
+      "6              no  \n",
+      "7              no  \n",
+      "8              no  \n",
+      "9              no  \n",
+      "10             no  \n",
+      "11             no  \n",
+      "12             no  \n",
+      "13             no  \n",
+      "14             no  \n",
+      "15             no  \n",
+      "16             no  \n",
+      "17             no  \n",
+      "18             no  \n",
+      "19             no  \n",
+      "20             no  \n",
+      "21             no  \n",
+      "22             no  \n",
+      "23             no  \n",
+      "24             no  \n"
+     ]
+    }
+   ],
    "source": [
     "from SADL.static_data.static_datasets_uci import global_load\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -42,6 +116,13 @@
    "metadata": {},
    "source": [
     "#### Tests with different models of the flex-anomaly platform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Iforest"
    ]
   },
   {
@@ -296,6 +377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### AutoEncoder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -478,6 +566,13 @@
    ],
    "source": [
     "modelAE.evaluate(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Cluster"
    ]
   },
   {
@@ -726,6 +821,13 @@
    ],
    "source": [
     "modelCluster.evaluate(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### PCA"
    ]
   },
   {
