--- a/notebooks_test/test_pyod.ipynb
+++ b/notebooks_test/test_pyod.ipynb
@@ -2,25 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "True\n",
+      "{'label_parser': True, 'algorithm_': 'CBLOF', 'alpha': 0.9, 'beta': 5, 'check_estimator': False, 'clustering_estimator': None, 'contamination': 2, 'n_clusters': 8, 'random_state': None, 'use_weights': False}\n",
+      "False\n",
+      "{'label_parser': False, 'algorithm_': 'ABOD', 'contamination': 2, 'method': 'fast', 'n_neighbors': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "#%reload_ext autoreload\n",
-    "\n",
     "# temporary solution for relative imports in case sadl is not installed\n",
     "# if sadl is installed, no need to use the line\n",
     "import sys\n",
     "import os\n",
-    "import inspect\n",
-    "sys.path.append(\"/mnt/homeGPU/mbautista/S-ADL\")\n",
     "from inspect import signature\n",
     "import numpy as np\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.path.dirname(\"__file__\"), '..')))\n",
-    "\n",
+    "sys.path.append(\"/mnt/homeGPU/mbautista/S-ADL\")\n",
     "from SADL.static_data.algorithms import pyod\n",
+    "\n",
+    "\n",
     "\n",
     "kwargs = {\"algorithm_\": \"cblof\",\"contamination\":2, \"label_parser\": True}\n",
     "model = pyod.PyodAnomalyDetection(**kwargs)\n",
@@ -100,46 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "PYODerror fit(): ('method', 'is not a valid method')\n",
-      "For further reference please see: https://pyod.readthedocs.io/en/latest/\n",
-      "PYODerror decision_function(): This ABOD instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.\n",
-      "For further reference please see: https://pyod.readthedocs.io/en/latest/\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'NoneType' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m model\u001b[38;5;241m.\u001b[39mset_params(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#print(model.model)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Fit the model using SADL Library - sin error\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#model.fit(X)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m scores_pred \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecision_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(scores_pred)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'NoneType' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "kwargs = {\"algorithm_\": \"abod\",\"contamination\":2, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'method'}\n",
     "model = pyod.PyodAnomalyDetection(**kwargs)\n",
-    "\n",
     "# Fit the model using SADL Library - error en fit\n",
     "model.fit(X)\n",
+    "\n",
     "kwargs = {\"algorithm_\": \"abod\",\"contamination\":0.1, \"label_parser\": True, \"n_neighbors\": 4, \"method\": 'fast'}\n",
     "model.set_params(**kwargs)\n",
-    "#print(model.model)\n",
-    "# Fit the model using SADL Library - sin error\n",
-    "#model.fit(X)\n",
+    "print(model.model)\n",
+    "# #Fit the model using SADL Library - sin error\n",
+    "model.fit(X)\n",
     "scores_pred = model.decision_function(X) * -1\n",
     "print(scores_pred)"
    ]
@@ -238,229 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "{'label_parser': <function function at 0x7f2d47aace50>, 'algorithm_': 'ABOD', 'contamination': 0.1, 'method': 'fast', 'n_neighbors': 4}\n",
-      "Estoy en funcion\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False, False],\n",
-       "       [ True, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [False, False],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [ True, False],\n",
-       "       [False,  True],\n",
-       "       [ True, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [ True, False],\n",
-       "       [False, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [ True,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [ True, False],\n",
-       "       [ True,  True]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
