evaluate transformer vanilla in notebooks_test

--- a/notebooks_test/test_transformers.ipynb
+++ b/notebooks_test/test_transformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-17 20:39:09.811992: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-07-17 20:39:09.823887: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1752777549.841259  150795 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1752777549.845073  150795 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-07-17 20:39:09.860682: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Params: {'label_parser': <function <lambda> at 0x7a68bb329e10>, 'train_epochs': 10, 'batch_size': 16, 'lr': 0.001} \n",
+      "Train Params: {'label_parser': None, 'train_epochs': 5, 'batch_size': 16, 'lr': 0.001} \n",
       "Model Params: {'algorithm_': 'Transformer', 'size_enc_in': 5, 'size_dec_in': 5, 'ulayers_feedfwd': 128, 'seq_len': 24, 'd_qk': 64, 'd_v': 64, 'd_model': 64, 'n_layers': 2, 'n_heads': 8, 'dropout_rate': 0.1, 'attns_outs': False}\n"
      ]
     }
@@ -107,6 +120,7 @@
     "seq_len = 24\n",
     "input_dim = 5  # tanto encoder como decoder\n",
     "d_model = 64\n",
+    "train_epochs = 10\n",
     "\n",
     "# Simulamos series de entrada\n",
     "X = torch.randn(batch_size, seq_len, input_dim)\n",
@@ -114,7 +128,7 @@
     "# Instanciamos el modelo Transformer\n",
     "kwargs ={\n",
     "    \"algorithm_\": \"Transformer\",\n",
-    "    \"label_parser\": lambda scores: (scores > np.percentile(scores, 95)).astype(int),\n",
+    "    \"label_parser\": None,\n",
     "    \"size_enc_in\":input_dim,\n",
     "    \"size_dec_in\": input_dim,\n",
     "    \"ulayers_feedfwd\": 128,\n",
@@ -126,7 +140,7 @@
     "    \"n_heads\": 8,\n",
     "   \"dropout_rate\": 0.1,\n",
     "   \"attns_outs\":False, \n",
-    "    \"train_epochs\": 10,\n",
+    "    \"train_epochs\": train_epochs,\n",
     "    \"batch_size\": batch_size,\n",
     "    \"lr\": 1e-3\n",
     "    }\n",
@@ -144,7 +158,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8000, 5) (2000, 5) (8000,) (2000,)\n"
+      "X_train shape: (7977, 24, 5)\n",
+      "y_train shape: (7977, 24)\n",
+      "X_test shape: (1977, 24, 5)\n",
+      "y_test shape: (1977, 24)\n"
      ]
     }
    ],
@@ -159,35 +176,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "model.fit(X_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([16, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/torch/nn/modules/loss.py:610: UserWarning: Using a target size (torch.Size([9, 24, 5])) that is different to the input size (torch.Size([24, 5])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anomaly scores: torch.Size([16])\n",
-      "Predicted labels: torch.Size([384, 5])\n"
+      "Epoch 1/5, Loss: 1.004393\n",
+      "Epoch 2/5, Loss: 0.980808\n",
+      "Epoch 3/5, Loss: 0.979639\n",
+      "Epoch 4/5, Loss: 0.979225\n",
+      "Epoch 5/5, Loss: 0.973495\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<SADL.time_series.algorithms.transformers.TransformersAnomalyDetection at 0x7f6f1efc45b0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores = model.decision_function(X)\n",
-    "labels = model.predict(X)\n",
+    "\n",
+    "model.fit(X_train_windows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = model.decision_function(X_train_windows)\n",
+    "labels = model.predict(X_train_windows)\n",
     "\n",
     "print(\"Anomaly scores:\", scores.shape)\n",
     "print(\"Predicted labels:\", labels.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(X_test_windows,y_test_windows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
