test sklearn complete and visualization

--- a/notebooks_test/test_pyod_complete.ipynb
+++ b/notebooks_test/test_pyod_complete.ipynb
@@ -126,6 +126,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Define Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Preprocess Data\n",
+    "scaler = StandardScalerPreprocessing()\n",
+    "X_scaled = scaler.fit_transform(X_train)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -142,17 +160,6 @@
     "kwargs = {\"algorithm_\": \"cblof\",\"contamination\":0.1}\n",
     "model_cblof = pyod.PyodAnomalyDetection(**kwargs)\n",
     "print(model_cblof.get_params())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Preprocess Data\n",
-    "scaler = StandardScalerPreprocessing()\n",
-    "X_scaled = scaler.fit_transform(X_train)\n"
    ]
   },
   {
@@ -197,15 +204,6 @@
     "Xtest_scaled = scaler.fit_transform(X_test)\n",
     "pred = model_cblof.predict(Xtest_scaled)\n",
     "print(\"Prediction:\",pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test == pred"
    ]
   },
   {
