notebook test_tsfedl

--- a/notebooks_test/test_flexanomalies_ts.ipynb
+++ b/notebooks_test/test_flexanomalies_ts.ipynb
@@ -27,7 +27,9 @@
    "source": [
     "from flexanomalies.datasets.preprocessing_utils import scaling\n",
     "from SADL.federated_data.algorithms import flexanomalies\n",
-    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n"
+    "from SADL.time_series.time_series_utils import TimeSeriesProcessor\n",
+    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series \n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -43,8 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SADL.time_series.time_series_datasets_uci import global_load as load_time_series \n",
-    "from sklearn.model_selection import train_test_split\n",
     "X,y = load_time_series('ai4i_2020_predictive_maintenance_dataset')   #name dataset in static datasets uci repo\n",
     "labels = y[\"Machine failure\"]\n",
     "X = X.drop('Type',axis=1)  # remove Type or apply one hot encoding"
